persisting rooms
