# hotel-spring-impl/src/main/java/com/ellisonalves/thehotel/infrastructure/spring/rest/room/RoomToViewMapper.java
@@ -1,6 +1,7 @@
 package com.ellisonalves.thehotel.infrastructure.spring.rest.room;
 
 import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
 import org.mapstruct.MappingConstants;
 
 import com.ellisonalves.thehotel.application.usecases.room.UpdateRoomDto;
@@ -10,8 +11,12 @@ import com.ellisonalves.thehotel.infrastructure.rest.model.RoomData;
 @Mapper(componentModel = MappingConstants.ComponentModel.SPRING)
 public interface RoomToViewMapper {
 
+    @Mapping(target = "money.amount", source = "unitPrice.amount")
+    @Mapping(target = "money.currency", source = "unitPrice.currencyCode")
     UpdateRoomDto toUpdateRoomDto(RoomData roomData);
 
+    @Mapping(target = "unitPrice.amount", source = "amount")
+    @Mapping(target = "unitPrice.currencyCode", source = "currency")
     RoomData toRoomData(Room room);
 
 }
